Increased number of data points to 500000 to try and decrease variance in logistic regression model

--- a/YelpReviewClassifier.ipynb
+++ b/YelpReviewClassifier.ipynb
@@ -143,19 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# extract features and labels from the dataset that are going to be used\n",
-    "filtered_data = data_df[['text', 'stars']][:50000]"
+    "filtered_data = data_df[['text', 'stars']][:500000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -425,10 +425,10 @@
     {
      "data": {
       "text/plain": [
-       "0.79253333333333331"
+       "0.83970666666666671"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,25 +473,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7573333333333333"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "forest.fit(tfidf_features_train, labels_train)\n",
-    "forest.score(tfidf_features_test, labels_test)"
+    "forest.score(tfidf_features_test, labels_test)\n",
+    "# with 100000 data points, this model classifier had an accuracy of around 78%"
    ]
   }
  ],
